Get user by JWT
