# src/routes/user.route.ts
@@ -2,7 +2,6 @@ import { Router } from 'express';
 import { UserController } from '../controllers/user.controller';
 
 const router = Router();
-const userController = new UserController();
 
 /**
  * @swagger
@@ -28,6 +27,71 @@ const userController = new UserController();
  *       500:
  *         description: Internal server error.
  */
-router.get('/users', userController.getAllUsers);
+router.get('/users', UserController.getAllUsers);
+
+/**
+ * @swagger
+ * /user/{token}:
+ *   get:
+ *     tags:
+ *       - Users
+ *     summary: Gets a user by a valid token.
+ *     description: Retrieves a specific user from values in an access token.
+ *     parameters:
+ *       - in: path
+ *         name: token
+ *         required: true
+ *         schema:
+ *           type: string
+ *         description: JWT
+ *     responses:
+ *       "200":
+ *         description: Listing retrieved successfully.
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 code:
+ *                   type: integer
+ *                   example: 200
+ *                 message:
+ *                   type: string
+ *                   example: "Listing fetched successfully"
+ *                 data:
+ *                   $ref: "#/components/schemas/IUser"
+ *       "404":
+ *         description: Listing not found
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 code:
+ *                   type: integer
+ *                   example: 404
+ *                 message:
+ *                   type: string
+ *                   example: "No listing found."
+ *                 data:
+ *                   type: object
+ *                   example: {}
+ *       "500":
+ *         description: Internal Server Error
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 code:
+ *                   type: integer
+ *                   example: 500
+ *                 message:
+ *                   type: string
+ *                   example: "Error fetching listing."
+ *                 data:
+ *                   type: null
+ */
+router.get("/user/:token", UserController.getUserByJwt)
 
 export default router;
