# swagger.json
@@ -7,7 +7,7 @@
   },
   "servers": [
     {
-      "url": "https://homeaiservice.onrender.com/api/v1",
+      "url": "http://localhost:10000/api/v1",
       "description": "Development server (HTTP) for v1"
     }
   ],
@@ -1322,6 +1322,98 @@
           },
           "500": {
             "description": "Internal server error."
+          }
+        }
+      }
+    },
+    "/user/{token}": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Gets a user by a valid token.",
+        "description": "Retrieves a specific user from values in an access token.",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "token",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "JWT"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Listing retrieved successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Listing fetched successfully"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/IUser"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Listing not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "type": "integer",
+                      "example": 404
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "No listing found."
+                    },
+                    "data": {
+                      "type": "object",
+                      "example": {}
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "type": "integer",
+                      "example": 500
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Error fetching listing."
+                    },
+                    "data": {
+                      "type": null
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       }
